[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
regex = "1.5.4"
yew = "0.18"
yew-router = "0.15.0"
yew-feather = "0.1.0"
wasm-bindgen = "0.2.78"
